<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.santanyuszi.golfcounter.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/material_margin_1"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/golf_score"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/material_padding_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/increase"
            android:textColor="@android:color/white"
            android:textSize="@dimen/material_text_subhead" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/decrease"
            android:textColor="@android:color/white"
            android:textSize="@dimen/material_text_subhead" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_one_stroke"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:longClickable="true"
                android:text="@string/score_one"
                android:textColor="@android:color/white"
                android:textSize="@dimen/golf_counter_digit" />


            <TextView
                android:id="@+id/player_two_stroke"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:longClickable="true"
                android:text="@string/score_two"
                android:textColor="@android:color/white"
                android:textSize="@dimen/golf_counter_digit" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_margin_1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_one"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/material_text_subhead" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_two"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/material_text_subhead" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/end_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:clickable="true"
        android:paddingBottom="@dimen/material_padding_4"
        android:paddingTop="@dimen/material_padding_4"
        android:text="@string/finish"
        android:textColor="@android:color/white"
        android:textSize="@dimen/material_text_title" />


</RelativeLayout>
